# searchEngine

./: CMakeLists.txt  README.md
include/: converterJSON.h  invertedIndex.h  searchServer.h
src/: CMakeLists.txt  converterJSON.cpp  invertedIndex.cpp  main.cpp  searchServer.cpp
tests/: CMakeLists.txt  testInvertedIndex.cpp  testSearchServer.cpp
